--- a/susten-clean-shop/src/components/ItemListContainer/ItemListContainer.css
+++ b/susten-clean-shop/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,15 @@
 .ItemList {
     width: 100%;
     height: calc(100vh - 90px);
+    padding-top: 90px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
+    gap: 70px;
+}
+
+.ItemListCards {
+    display: flex;
+    gap: 30px;
 }
