--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -10,6 +10,7 @@
 
 .Catalogo {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  justify-items: center;
   gap: 30px;
 }
